national number line point z-index fix

--- a/style.css
+++ b/style.css
@@ -692,6 +692,7 @@ button {
 }
 .number-line--point[data-key="National"] {
   background: #10CD36 !important;
+  z-index: 8;
 }
 
 .map-only {
